--- a/index.html
+++ b/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio Aristides Queta</title>
-    <link rel="stylesheet" href="css/estilo.css">
-</head>
-
-<body>
-    <header>
-        <img src="img/photo.gif">
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </header>
-    <!--  -->
-    <section>
-        <div id="corpo">
+    <head>
+        <meta charset="UTF-8">
+        <title>Portfolio Aristides Queta 3rd</title>
+        <meta name="description" content="">
+        <meta name=”author” content="Aristides Queta">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name=”keywords” content="Portfolio, Aristides Queta, programador">
+        <link rel="stylesheet" href="css/estilo.css">
+    </head>
+    <body>
+        <header class>
+            <ul class="menu-p">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+                <details>
+                    <summary><img src="./img/icone-menu.png" alt="menu"/></summary>
+                    <ul class="menu-s">
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </details>
+        </header>
+        <!--  -->
+        <section>
+        
             <div id="home">
                 <h2>Aristides Queta 3rd</h2>
-                <img src="./img/IMG_20200223_215346_710.JPG" width="100%">
-                <p>
-                    Olá Bem vindo ao meu portfólio, ainda está vago pois não tenho muita experiência como programador.
-                    <br> Estou em busca de um estágio ou trabalho envolvendo minha life of programamer, porém estou
-                    sempre
-                    <br> pronto para ajudar e aprender tecnologias novas.
+                <p style="text-align:justify">
+                    Olá Bem vindo ao meu portfólio, ainda está vago pois não tenho muita experiência como programador. <br>
+                    Estou em busca de um estágio ou trabalho, porém estou sempre pronto para ajudar e aprender tecnologias novas.
                 </p>
             </div>
             <!---->
@@ -36,16 +41,20 @@
                 <h2>About Me</h2>
                 <nav>Formação</nav>
                 <ul>
-                    <li><span class="fot">Instituto Politécnico Industrial de Luanda [IPIL ex: IMIL] (2019 -
-                            2022)</span>
-                        <br>&bigstar; Técnico de Gestão de Sistemas Informaticos</li>
+                    <li><span >Instituto Politécnico Industrial de Luanda [IPIL ex: IMIL] (2019 - 2023)</span>
+                        <br>&bigstar; Técnico de Gestão de Sistemas Informaticos
+                    </li>
                 </ul>
-                <nav>Experiência</nav>
+                <nav>Experiências Profissionais</nav>
                 <ul>
-                    <li>Curso de Informática básico - EDOSA (2019)</li>
+                    <li>Curso de Informática Básico - EDOSA (2019)</li>
+                    <li>Curso de Lógica - Curso em Video (2019)</li>
                     <li>Curso de HTML5 - Curso em Video (2019)</li>
+                    <li>Curso de JavaScript - Curso em Video (2019)</li>
+                    <li>Curso de MySQL - Curso em Video (2020)</li>
+                    <li>Curso de PHP POO - Curso em Video (2021)</li>
                 </ul>
-                <nav>Qualificação</nav>
+                <nav>Qualificações</nav>
                 <ul>
                     <li></li>
                 </ul>
@@ -56,22 +65,21 @@
                 <p>Luanda, Angola</p>
                 <p>Celular: +244 948081477</p>
                 <p>E-mail: aristidesquetajr@gamil.com</p>
-                Me envie uma mensagem:
-                <form action="" method="post">
+                Envie-me um e-mail:
+                <form action="" method="post" name="contactar">
                     <ul>
-                        <li><label for="iNome">Nome:</label></li>
-                        <li><input type="text" name="nNome" id="iNome" placeholder="Nome" required></li>
-                        <li><label for="iEmail">E-mail:</label></li>
-                        <li><input type="email" name="nEmail" id="iEmail" placeholder="E-mail" required></li>
+                        <li><input type="text" name="nNome" title="Nome" placeholder="Nome" required></li>
+                        <li><input type="email" name="nEmail" title="Email" placeholder="E-mail" required></li>
                         <li><input type="text" name="nObjetivo" placeholder="Objectivo" required></li>
-                        <li><textarea name="nMensagem" placeholder="Mensagem" required cols="30" rows="10"></textarea></li>
+                        <li>
+                            <textarea name="nMensagem" placeholder="Mensagem" required cols="30" rows="10"></textarea>
+                            <input type="submit" value="Enviar">
+                        </li>
                     </ul>
-                    <input type="submit" value="Enviar">
                 </form>
             </div>
-        </div>
-    </section>
-    <script src="./js/app.js"></script>
-</body>
-
+        </section>
+        <footer>&copy; <span></span> - Todos os termos reservados</footer>
+        <script src="./js/app.js"></script>
+    </body>
 </html>
